Localize custom panels (seperately)
Ping #7

--- a/lang/base.json
+++ b/lang/base.json
@@ -19,99 +19,72 @@
         "about"   : "About",
         "channels": "Channel List"
     },
-    "loginMessages": [
-        "Hint #1! When you close a channel this one will be deleted from your favorites and won't come back on the next connection.",
-        "Hint #2! To join a new channel type this command in the chat box: /j #channel"
-    ],
-    "joinAfterAuth": {
-        "message": "Waiting for login before joining channels...",
-        "type"   : 1
-    },
-    "authFailed": [
-        "Could not auth with IRC network - waited 5 seconds.",
-        "Otherwise reattempt authing by sending: \"/AUTH <your username> <your password>\"",
-        "To ignore the error and join channels, unauthed, type: \"/autojoin\"."
-    ],
-    "authSuccess"            : "Authenticated with network!",
-    "signOn"                 : "SIGNON",
-    "joinChans"              : "Joining channels...",
-    "noTopic"                : "(No topic set.)",
-    "changeTopicNeedsOp"     : "Sorry, you need to be a channel operator to change the topic!",
-    "changeTopicConfirm"     : "Change topic of {channel} to:",
-    "poorJoinFormat"         : "Channel names begin with # (corrected automatically).",
-    "invalidCommand"         : "Can't use this command in this window",
-    "invalidChanTarget"      : "Can't target a channel with this command.",
-    "insufficentArgs"        : "Insufficient arguments for command.",
-    "loadingPage"            : "Loading . . .",
-    "fishSlap"               : "slaps {nick} with a large fishbot",
+
     "copyright": [
         "qwebirc v-{qwebirc.VERSION}", "Copyright (C) 2008-2011 Chris Porter and the qwebirc project.",
         "Current version by Graeme \"megawac\" Yeates",
         "http://www.qwebirc.org",
         "Licensed under the GNU General Public License, Version 2."
     ],
+    "loginMessages": [
+        "Hint #1! When you close a channel this one will be deleted from your favorites and won't come back on the next connection.",
+        "Hint #2! To join a new channel type this command in the chat box: /j #channel"
+    ],
+
     "ircAlert"               : "IRC Alert",
     "alertNotice"            : "Alert!",
     "activityNotice"         : "Activity!",
+    "signOn"                 : "SIGNON",
+
+    "authSuccess"            : "Authenticated with network!",
+    "authFailed": [
+        "Could not auth with IRC network - waited 5 seconds.",
+        "Otherwise reattempt authing by sending: \"/AUTH <your username> <your password>\"",
+        "To ignore the error and join channels, unauthed, type: \"/autojoin\"."
+    ],
+    "joinChans"              : "Joining channels...",
+    "joinAfterAuth": {
+        "message": "Waiting for login before joining channels...",
+        "type"   : 1
+    },
+
+    "poorJoinFormat"         : "Channel names begin with # (corrected automatically).",
+    "changeTopicNeedsOp"     : "Sorry, you need to be a channel operator to change the topic!",
+    "changeTopicConfirm"     : "Change topic of {channel} to:",
+    "invalidCommand"         : "Can't use this command in this window",
+    "invalidChanTarget"      : "Can't target a channel with this command.",
+    "insufficentArgs"        : "Insufficient arguments for command.",
+
+    "setNick"                : "Set nickname",
+    "setNickDesc"            : "Enter a new nickname",
+    "setChanDialog"          : "Set initial channels (comma seperated)",
+    "setChanTitle"           : "Set Channels",
+
+    "closeTab"               : "Close tab",
+    "detachWindow"           : "Detach Window",
+    "attachWindow"           : "Redock Window",
+    "dropdownHint"           : "Click the icon for the main menu.",
+
+    "fishSlap"               : "slaps {nick} with a large fishbot",
     "partChan"               : "Part",
+
+    "noTopic"                : "(No topic set.)",
     "disconnected"           : "Client has been disconnected",
     "uncontrolledFlood"      : "ERROR: uncontrolled flood detected -- disconnected.",
     "connLost"               : "Connection Lost",
     "connError"              : "An error occured: {1}",
     "connTimeOut"            : "Error: connection closed after {retryAttempts} requests failed.",
     "connFail"               : "Couldn't connect to remote server.",
-    "dropdownHint"           : "Click the icon for the main menu.",
-    "closeTab"               : "Close tab",
-    "detachWindow"           : "Detach Window",
-    "attachWindow"           : "Redock Window",
-    "missingNick"            : "You must supply a nickname",
-    "missingPass"            : "You must supply a password",
-    "nickWrongLen"           : "Nick must be between {min} and {max} characters",
-    "setNick"                : "Set nickname",
-    "setNickDesc"            : "Enter a new nickname",
-    "setChanTitle"           : "Set Channels",
-    "setChanDialog"          : "Set initial channels (comma seperated)",
-    "connectWelcome"         : "Connect to {network} IRC",
+    
+    "connectWelcome"         : "Connect to {appTitle}",
     "nickname"               : "Nickname",
     "username"               : "Username",
     "password"               : "Password",
     "enableAuth"             : "Authenticate (optional)",
-    "ENABLE_IMAGE_POPOUT"    : "Pop images out on hover..?",
-    "NICK_OV_STATUS"         : "Show status (@/+) before nicknames in channel lines",
-    "ACCEPT_SERVICE_INVITES" : "Automatically join channels when invited",
-    "USE_HIDDENHOST"         : "Hide your hostmask when authed (+x)",
-    "LASTPOS_LINE"           : "Show a last position indicator for each window",
-    "HIDE_JOINPARTS"         : "Hide JOINS/PARTS/QUITS",
-    "BACKGROUND"             : "Background colour",
-    "FONT_COLOUR"            : "Font colour",
-    "SHOW_NICKLIST"          : "Show nickname list in channels",
-    "SHOW_TIMESTAMPS"        : "Show timestamps",
-    "FONT_SIZE"              : "Font size (px)",
-    "VOLUME"                 : "Volume",
-    "AUTO_OPEN_PM"           : "Automatically select window on private message",
-    "FLASH"                  : "flash",
-    "BEEP"                   : "beep",
-    "PM"                     : "pm",
-    "MENTION"                : "mentioned",
-    "ENABLE_BROUHAHA"        : "Enable channel message aggregator (brouhaha)",
-    "MESSAGE_PLACEHOLDER"    : " something ... ",
-    "NICK_PLACEHOLDER"       : " someone ... ",
-    "TYPE_PLACEHOLDER"       : "type test",
-    "DELETE_NOTICE"          : "remove",
-    "ADD_NOTICE"             : "Add notifier",
-    "USER_NOTICE"            : "User:",
-    "TYPE_NOTICE"            : "Type:",
-    "MESSAGE_NOTICE"         : "Message:",
-    "AUTOESCAPE"             : "Escape text",
-    "MENTIONED"              : "Mentioned",
-    "ESCAPE_HINT"            : "This text is transformed into a regular expressions - autoescaping will check for the exact text you entered",
-    "DESKTOP_NOTICES"        : "Allow us to send desktop notifications if supported (on any notice with flash)",
-    "IGNORE_CASE"            : "Case insensitive",
-    "NOTUS"                  : "Not us",
-    "NOTUS_HINT"             : "Not our message",
-    "HIGHLIGHT"              : "hl",
-    "HIGHLIGHT_HINT"         : "highlight",
-    "QUIT_MSG"               : "Set quit message: ",
-    "ENABLE"                 : "Enable",
-    "DISABLE"                : "Disable"
+
+    "missingNick"            : "You must supply a nickname",
+    "missingPass"            : "You must supply a password",
+    "nickWrongLen"           : "Nick must be between {min} and {max} characters",
+
+    "loadingPage"            : "Loading . . ."
 }
