--- a/lang/base.json
+++ b/lang/base.json
@@ -35,6 +35,7 @@
     "alertNotice"            : "Alert!",
     "activityNotice"         : "Activity!",
     "signOn"                 : "SIGNON",
+    "dontLeave"              : "This action will close all active IRC connections.",
 
     "authSuccess"            : "Authenticated with network!",
     "authFailed": [
@@ -86,5 +87,5 @@
     "missingPass"            : "You must supply a password",
     "nickWrongLen"           : "Nick must be between {min} and {max} characters",
 
-    "loadingPage"            : "Loading . . ."
+    "loadingMessage"            : "Loading"
 }
