Add option for setting notification sound

--- a/lang/base.json
+++ b/lang/base.json
@@ -87,5 +87,8 @@
     "missingPass"            : "You must supply a password",
     "nickWrongLen"           : "Nick must be between {min} and {max} characters",
 
-    "loadingMessage"            : "Loading"
+    "loadingMessage"         : "Loading",
+
+    "ENABLE"                 : "Enable",
+    "DISABLE"                : "Disable"
 }
