--- a/lang/panes/options/base.json
+++ b/lang/panes/options/base.json
@@ -34,15 +34,16 @@
         "AUTOESCAPE"                : "Escape text",
         "MENTIONED"                 : "Mentioned",
         "ESCAPE_HINT"               : "This text is transformed into a regular expressions - autoescaping will check for the exact text you entered",
-        "DESKTOP_NOTICES"            : "Allow us to send desktop notifications if supported (on any notice with flash)",
+        "DESKTOP_NOTICES"           : "Receive desktop notifications if supported (on any notice with flash)",
         "IGNORE_CASE"               : "Case insensitive",
         "NOTUS"                     : "Not us",
         "NOTUS_HINT"                : "Not our message",
         "HIGHLIGHT"                 : "hl",
         "HIGHLIGHT_HINT"            : "highlight",
         "QUIT_MSG"                  : "Set quit message: ",
-        "ENABLE"                    : "Enable",
-        "DISABLE"                   : "Disable",
+
+        "NOTICE_SOUND"              : "Sound played on notice",
+        "TEST"                      : "Test",
 
         "standardNotices"           : "Standard Notices",
         "customNotices"             : "Custom Notices",
